# RIGOLOscilloscopeGUI

./: .clang-format  .gitignore  CMakeLists.txt  CPPLINT.cfg  Makefile  README.md  requirements.txt  setup.sh
scripts/: format.sh  lint.sh
src/: config.py  main.cpp  rigol_gui.py  rigol_instrument.py  test_components.py  utils.py
src/analysis/: fftanalyzer.cpp  fftanalyzer.h  protocoldecoder.cpp  protocoldecoder.h
src/communication/: deviceconnection.cpp  deviceconnection.h  scpicommands.h  waveformprovider.cpp  waveformprovider.h
src/core/: cursormanager.cpp  cursormanager.h  measurementengine.cpp  measurementengine.h  scopechannel.cpp  scopechannel.h  scopesettings.cpp  scopesettings.h
src/ui/: analogcontrolpanel.cpp  analogcontrolpanel.h  channelcontrolpanel.cpp  channelcontrolpanel.h  connectiondialog.cpp  connectiondialog.h  digitalcontrolpanel.cpp  digitalcontrolpanel.h  fftwindow.cpp  fftwindow.h  footerwidget.cpp  footerwidget.h  headerwidget.cpp  headerwidget.h  mainwindow.cpp  mainwindow.h  mainwindow_old.cpp  measurementpanel.cpp  measurementpanel.h  theme.cpp  theme.h  triggerpanel.cpp  triggerpanel.h  waveformdisplay.cpp  waveformdisplay.h
src/utils/: dataexporter.cpp  dataexporter.h
